<resources>
    <string name="app_name">Football Club Online</string>
    <string name="next_match">Next Match</string>
    <string name="last_match">Last Match</string>
    <string name="overview">Overview</string>
    <string name="players">Players</string>
    <string name="matches">Matches</string>
    <string name="teams">Teams</string>
    <string name="fav">Favorites</string>
    <string name="vs">VS</string>
    <string name="shots">Shots</string>
    <string name="lineups">Lineups</string>
    <string name="gk">Goal Keeper</string>
    <string name="df">Defense</string>
    <string name="mf">Midfield</string>
    <string name="fw">Forward</string>
    <string name="camp_nou">Camp Nou</string>
    <string name="_1899">1899</string>
    <string name="barcelona">Barcelona</string>


    <array name="list_league">
        <item>English Premier League</item>
        <item>English League Championship</item>
        <item>German Bundesliga</item>
        <item>Italian Serie A</item>
        <item>French Ligue 1</item>
        <item>Spanish La Liga</item>
    </array>
    <array name="id_list_league">
        <item>4328</item>
        <item>4329</item>
        <item>4331</item>
        <item>4332</item>
        <item>4334</item>
        <item>4335</item>
    </array>
</resources>
