<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_match"
        android:enabled="true"
        android:icon="@drawable/ic_event_available_white_24dp"
        android:title="@string/matches"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/nav_favorites"
        android:enabled="true"
        android:icon="@drawable/ic_favorite_white_24dp"
        android:title="@string/fav"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/nav_teams"
        android:enabled="true"
        android:icon="@drawable/ic_assistant_photo_white_24dp"
        android:title="@string/teams"
        app:showAsAction="ifRoom"/>

</menu>