<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">


    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbarDetailTeams"
            android:layout_width="match_parent"
            app:titleTextColor="@color/colorWhite"
            android:layout_height="?attr/actionBarSize"/>

        <ImageView
            android:id="@+id/imgClubBadge"
            android:layout_gravity="center"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:src="@drawable/img_barca"
            android:layout_marginBottom="4dp"
            tools:ignore="ContentDescription" />
        <TextView
            android:id="@+id/tvClubName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/barcelona"
            android:textColor="@color/colorWhite"
            android:textAlignment="center"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/tvClubYearFormed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_1899"
            android:textColor="@color/colorWhite"
            android:textAlignment="center"/>
        <TextView
            android:id="@+id/tvClubStadium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/camp_nou"
            android:textColor="@color/colorWhite"
            android:textAlignment="center"/>
        <android.support.design.widget.TabLayout
            android:id="@+id/tabDetailTeam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabTextColor="@color/colorWhite"
            app:tabIndicatorColor="@color/colorWhite"/>
    </android.support.design.widget.AppBarLayout>
    <android.support.v4.view.ViewPager
        android:id="@+id/vpTeams"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>
